Added comments to the blog posts

--- a/_posts/2016-01-06-PyVyM-Part2.md
+++ b/_posts/2016-01-06-PyVyM-Part2.md
@@ -4,6 +4,7 @@ title: PyVyM - Part 2. Design description
 excerpt: Description of the design of a python based VM. This post details the model, exec_frame stack and other details sorrounding the implementation.
 tags: [virtualmachine, vm, python3, python]
 modified: 2016-01-06
+comments: true
 ---
 ## [Github Link](https://github.com/ssarangi/PyVyM)
 
