Added jekyl crosspost to medium

--- a/_posts/2016-01-06-PyVyM-Part2.md
+++ b/_posts/2016-01-06-PyVyM-Part2.md
@@ -5,6 +5,7 @@ excerpt: Description of the design of a python based VM. This post details the m
 tags: [virtualmachine, vm, python3, python]
 modified: 2016-01-06
 comments: true
+crosspost_to_medium: true
 ---
 ## [Github Link](https://github.com/ssarangi/PyVyM)
 
